pkg/lang/testdata/ub/config/invalid/encryption-bad-key-source-value.ub
encryption: { @key-source: 'env-key' }
